--- a/app-server/package.json
+++ b/app-server/package.json
@@ -7,7 +7,7 @@
     "start": "node main.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPLV3",
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
